<resources>
    <string name="app_name">ATM Consultec</string>
    <string name="clientes">Clientes</string>
    <string name="ip_morgan">- IP Morgan</string>
    <string name="soft_tech">- Soft Tech</string>
    <string name="monster_tech">- Monster Tech</string>
    <string name="empresas">Empresas</string>
    <string name="servi_os">- Serviços</string>
    <string name="desenvolvimento_web">- Desenvolvimento web</string>
    <string name="desenvolvimento_back">- Desenvolvimento back</string>
    <string name="desenvolvimento_front">- Desenvolvimento Front</string>
    <string name="contato">- Contato</string>
</resources>
