<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhesClienteMenuActivity">

   <ImageView
       android:id="@+id/iv_detalhes_cliente"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/detalhe_cliente"
       android:layout_marginTop="16dp"
       android:layout_marginLeft="16dp"
       android:layout_marginStart="16dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>

   <TextView
       android:id="@+id/tv_title_clientes"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="26dp"
       android:layout_marginLeft="16dp"
       android:layout_marginStart="16dp"
       android:text="@string/clientes"
       app:layout_constraintStart_toEndOf="@+id/iv_detalhes_cliente"
       app:layout_constraintBottom_toBottomOf="@id/iv_detalhes_cliente"
       />

   <TextView
       android:id="@+id/tv_description_menu_clientes"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/ip_morgan"
       android:layout_marginTop="36dp"
       app:layout_constraintStart_toStartOf="@id/tv_title_clientes"
       app:layout_constraintTop_toBottomOf="@id/iv_detalhes_cliente"/>

   <TextView
       android:id="@+id/tv_description_menu_clientes_1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"

       android:text="@string/soft_tech"
       android:layout_marginTop="16dp"
       app:layout_constraintTop_toBottomOf="@id/tv_description_menu_clientes"
       app:layout_constraintStart_toStartOf="@id/tv_description_menu_clientes"/>

   <TextView
       android:id="@+id/tv_description_menu_clientes_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/monster_tech"
       app:layout_constraintStart_toStartOf="@id/tv_description_menu_clientes_1"
       app:layout_constraintTop_toBottomOf=""/>



</android.support.constraint.ConstraintLayout>