<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhesServisosActivity">

    <ImageView
        android:id="@+id/iv_detalhes_serviços"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/detalhe_servico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_serviços"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servi_os"
        android:textSize="26dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_detalhes_serviços"
        app:layout_constraintStart_toEndOf="@id/iv_detalhes_serviços" />

    <TextView
    android:id="@+id/tv_description_menu_serviços"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/desenvolvimento_web"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/iv_detalhes_serviços"
    app:layout_constraintStart_toStartOf="@id/tv_title_serviços"/>

    <TextView
        android:id="@+id/tv_description_menu_serviços1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvimento_back"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_description_menu_serviços"
        app:layout_constraintStart_toStartOf="@id/tv_description_menu_serviços"/>

    <TextView
        android:id="@+id/tv_description_menu_serviços2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvimento_front"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_title_serviços"
        app:layout_constraintTop_toBottomOf="@id/tv_description_menu_serviços1"/>


</android.support.constraint.ConstraintLayout>